# tpl-gen-api

./: Makefile
cnf/lst/: tpl-gen-api.exclude.lst  tpl-gen-api.include.lst
lib/bash/funcs/: debian-install-bins.func.sh  define-all-run-vars.func.sh  extract-org-app.func.sh  log.func.sh  morph-dir.func.sh  require-var.func.sh  resolve-dirname.func.sh  resolve-oap.func.sh  set-vars-on-debian.func.sh  set-vars-on-fedora.func.sh  set-vars-on-mac.func.sh  set-vars-on-manjaro.func.sh  set-vars-on-suse.func.sh  set-vars-on-ubuntu.func.sh
src/bash/run/: app-start.func.sh  app-stop.func.sh  docker-init-infra-conf-generator.sh  docker-init-tpl-gen-api.sh  help-to-history.func.sh  run.sh  (+1 more)
src/make/: install-img-tpl-gen-api.func.mk  run-tpl-gen-api.incl.mk  test-tpl-gen-api.incl.mk
src/python/tpl-gen-api/: .coveragerc  .tplignore  pyproject.toml  pytest.ini
src/python/tpl-gen-api/tests/: test_console_utils.py  test_convert_utils.py  test_env_utils.py  test_io_utils.py  test_pkey_replace.py  test_tpl_utils.py
src/python/tpl-gen-api/tpl_gen/: convert_yaml_to_json.py
src/python/tpl-gen-api/tpl_gen/config/: config_data_loader.py  run_env.py
src/python/tpl-gen-api/tpl_gen/exceptions/: __init__.py
src/python/tpl-gen-api/tpl_gen/libs/utils/: console_utils.py  env_utils.py  tpl_utils.py
src/python/tpl-gen-api/tpl_gen_api/: __init__.py  main.py  tpl_gen.py
src/python/tpl-gen-api/tpl_gen_api/config/: __init__.py
src/python/tpl-gen-api/tpl_gen_api/exceptions/: exceptions.py
src/python/tpl-gen-api/tpl_gen_api/libs/utils/: convert_utils.py  io_utils.py  string_utils.py
(+13 files in other folders)
